syntax = "proto3";

option go_package = "./proto";

service AuthenticationService {
    rpc Login(AuthRequest) returns (AuthResponse);
    rpc SignUp(SignUpRequest) returns (SignUpResponse);
}

message AuthRequest {
    string username = 1;
    string password = 2;
}

message AuthResponse {
    string first_name = 1;
    string last_name = 2;
    string username = 3;
    string email = 4;
    int32 active = 5;
    int32 admin = 6;
    string token = 7;
}

message SignUpRequest {
    string first_name = 1;
    string last_name = 2;
    string username = 3;
    string password = 4;
    string email = 5;
}

message SignUpResponse {
    string username = 1;
}
