syntax = "proto3";

option go_package = "./proto";

// Empty message from the Google Protobuf package
 import "google/protobuf/empty.proto";

service UserService {
    rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty);
    rpc GetUsers(google.protobuf.Empty) returns (GetUsersResponse);
}

message UpdateUserRequest {
    int64 UserID        = 1;
    string first_name   = 2;
    string last_name    = 3;
    string password     = 4;
}

message User {
    string first_name   = 1;
    string last_name    = 2;
    string email        = 3;
    bool active         = 4;
    bool admin          = 5;
}

message GetUsersResponse {
    repeated User users = 1;
}