syntax = "proto3";

option go_package = "./proto";

// Empty message from the Google Protobuf package
import "google/protobuf/empty.proto";

service InventoryService {
    rpc GetProducts(GetProductsRequest) returns (GetProductsResponse);
    rpc GetProductByID(GetProductByIDRequest) returns (Product);
    rpc CreateProduct(CreateProductRequest) returns (google.protobuf.Empty);
    rpc UpdateProduct(UpdateProductRequest) returns (google.protobuf.Empty);
    rpc DeleteProduct(DeleteProductRequest) returns (google.protobuf.Empty);

    // order microservice and inventory microservice
    rpc GetProductDetails(GetProductDetailsRequest) returns (GetProductDetailsResponse);
}

message GetProductsRequest {
    int32 UserID = 1;
}

message GetProductByIDRequest {
    int32 UserID = 1;
    int32 ProductID = 2;
}

message CreateProductRequest {
    int32 UserID = 1;
    string brand_name = 2;
    string category_name = 3;
    string product_name = 4;
    string description = 5;
    string size = 6;
    string color = 7;
    int32 quantity = 8;
}

message UpdateProductRequest {
    int32 UserID = 1;
    int32 ProductID = 2;
    string brand_name = 3;
    string category_name = 4;
    string product_name = 5;
    string description = 6;
    string size = 7;
    string color = 8;
    int32 quantity = 9;
}

message DeleteProductRequest {
    int32 UserID = 1;
    int32 ProductID = 2;
}

message Product {
    string brand_name = 1;
    string category_name = 2;
    string product_name = 3;
    string description = 4;
    string size = 5;
    string color = 6;
    int32 quantity = 7;
    string created_at = 8;
    string updated_at = 9;
}

message GetProductsResponse {
    repeated Product products = 1;
}

message GetProductDetailsRequest {
    int64 UserID = 1;
    string BrandName = 2;
    string CategoryName = 3;
    string ProductName = 4;
}

message GetProductDetailsResponse {
    int64 UserID = 2;
    int64 ProductID = 1;
}